--- a/www/css/theory.css
+++ b/www/css/theory.css
@@ -121,6 +121,9 @@ div.staff {
 
 code { background-color: #eddbb9; }
 
+table.honorcode { margin: 0px auto 25px auto; }
+table.honorcode td, table.honorcode th { border-style: none; padding: 12px 15px; }
+
 @media (min-width: 750px) {
 
 .menuparent {
